# learning-maldev

./: .gitignore  CLAUDE.md  Cargo.toml  FUTURE_TOPICS.md  README.md
00-rust-basics/: README.md
00-rust-basics/lessons/: 01-variables.md  02-types-casting.md  03-ownership.md  04-references.md  05-slices.md  06-option.md  07-result.md  08-raw-pointers.md  09-unsafe-transmute.md  10-structs.md
00-rust-basics/src/: main.rs
01-shellcode-runner/: Cargo.toml  README.md
01-shellcode-runner/src/: main.rs
02-process-injection/: Cargo.toml  README.md
02-process-injection/src/: main.rs
03-dll-injection/: Cargo.toml  README.md
03-dll-injection/src/: main.rs
03-dll-payload/: Cargo.toml
03-dll-payload/src/: lib.rs
04-hollow-payload/: Cargo.toml
04-hollow-payload/src/: main.rs
04-process-hollowing/: Cargo.toml  README.md
04-process-hollowing/src/: main.rs
05-evasion-basics/: Cargo.toml  README.md
05-evasion-basics/src/: main.rs
06-pe-disguise/: Cargo.toml  README.md
06-pe-disguise/src/: main.rs
07-reflective-loader/: Cargo.toml  README.md
07-reflective-loader/src/: main.rs
07-reflective-payload/: Cargo.toml
07-reflective-payload/src/: lib.rs
08-shellcode-peb-walk/: Cargo.toml  README.md
08-shellcode-peb-walk/src/: main.rs
09-direct-syscalls/: Cargo.toml  README.md
09-direct-syscalls/src/: main.rs
10-api-unhooking/: Cargo.toml  README.md
10-api-unhooking/src/: main.rs
11-etw-amsi/: Cargo.toml  README.md
11-etw-amsi/src/: main.rs
12-reverse-shell/: Cargo.toml  README.md
12-reverse-shell/src/: main.rs
13-payload-staging/: Cargo.toml  README.md
13-payload-staging/src/: main.rs
13-stage-two/: Cargo.toml
13-stage-two/src/: main.rs
14-apc-injection/: Cargo.toml  README.md
14-apc-injection/src/: main.rs
15-thread-hijacking/: Cargo.toml  README.md
15-thread-hijacking/src/: main.rs
16-module-stomping/: Cargo.toml  README.md
16-module-stomping/src/: main.rs
17-sleep-masking/: Cargo.toml  README.md
17-sleep-masking/src/: main.rs
18-stack-spoofing/: Cargo.toml  README.md
18-stack-spoofing/src/: main.rs
19-persistence/: Cargo.toml  README.md
19-persistence/src/: main.rs
20-token-manipulation/: Cargo.toml  README.md
20-token-manipulation/src/: main.rs
21-uac-bypass/: Cargo.toml  README.md
21-uac-bypass/src/: main.rs
22-lsass-dumping/: Cargo.toml  README.md
22-lsass-dumping/src/: main.rs
23-sam-dumping/: Cargo.toml  README.md
24-lateral-movement/: Cargo.toml  README.md
24-lateral-movement/src/: main.rs
25-http-beacon/: Cargo.toml  README.md
26-stage-two/: Cargo.toml
26-staged-payloads/: Cargo.toml  README.md
27-traffic-obfuscation/: Cargo.toml  README.md
28-process-doppelganging/: Cargo.toml  README.md
29-no-std-malware/: Cargo.toml  README.md
30-encrypt-macro/: Cargo.toml
30-proc-macro-obfuscation/: Cargo.toml  README.md
30-proc-macro-obfuscation/src/: main.rs
31-binary-hardening/: Cargo.toml  README.md
31-binary-hardening/src/: main.rs
(+8 files in other folders)
