[workspace]
members = [
    "00-rust-basics",
    "01-shellcode-runner",
    "02-process-injection",
    "03-dll-injection",
    "03-dll-payload",
    "04-hollow-payload",
    "04-process-hollowing",
    "05-evasion-basics",
    "06-pe-disguise",
    "07-reflective-loader",
    "07-reflective-payload",
    "08-shellcode-peb-walk",
    "09-direct-syscalls",
    "10-api-unhooking",
    "11-etw-amsi",
    "12-reverse-shell",
    "13-payload-staging",
    "13-stage-two",
    "14-apc-injection",
    "15-thread-hijacking",
    "16-module-stomping",
    "17-sleep-masking",
    "18-stack-spoofing",
    "19-persistence",
    "20-token-manipulation",
    "21-uac-bypass",
    "22-lsass-dumping",
    "23-sam-dumping",
    "24-lateral-movement",
    "25-http-beacon",
    "26-staged-payloads",
    "26-stage-two",
    "27-traffic-obfuscation",
    "28-process-doppelganging",
    "29-no-std-malware",
    "30-encrypt-macro",
    "30-proc-macro-obfuscation",
    "31-binary-hardening",
]
resolver = "2"
