[package]
name = "lateral-movement"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Wmi",
] }
